@@ -1,4 +1,4 @@
-<!ENTITY day          "08">
+<!ENTITY day          "09">
 <!ENTITY month        "05">
 <!ENTITY year         "2005">
 <!ENTITY version      "svn-&year;&month;&day;">
@@ -256,7 +256,7 @@
 
 <!-- Chapter 23 -->
 <!ENTITY db-version                   "4.3.27">
-<!ENTITY mysql-version                "4.1.10a">
+<!ENTITY mysql-version                "4.1.11">
 <!ENTITY postgresql-version           "8.0.1">
 
 <!-- Chapter 24 -->
