@@ -25,6 +25,10 @@
   <itemizedlist>
 
     <listitem>
+      <para>May 9th, 2005 [igor]: Updated to MySQL-4.1.11.</para>
+    </listitem>
+
+    <listitem>
       <para>May 8th, 2005 [randy]: Updated to Metacity-2.10.1; updated 
       XScreenSaver dependencies and build instructions.</para>
     </listitem>
