@@ -6,8 +6,8 @@
 
   <!ENTITY mysql-download-http "http://mysql.he.net/Downloads/MySQL-4.1/mysql-&mysql-version;.tar.gz">
   <!ENTITY mysql-download-ftp  "ftp://mirror.mcs.anl.gov/pub/mysql/Downloads/MySQL-4.1/mysql-&mysql-version;.tar.gz">
-  <!ENTITY mysql-md5           "6a4a6a5b3d0a42a9a271b2b8867bde82">
-  <!ENTITY mysql-size          "22.5 MB">
+  <!ENTITY mysql-md5           "0b99001b07cad53f161ec629a6bb24ea">
+  <!ENTITY mysql-size          "22 MB">
   <!ENTITY mysql-buildsize     "207 MB">
   <!ENTITY mysql-time          "3.83 SBU">
 ]>
@@ -81,6 +81,8 @@ running the following commands:</para>
     --with-unix-socket-path=/var/run/mysql/mysql.sock \
     --without-debug --without-bench --without-readline &amp;&amp;
 make testdir=/usr/lib/mysql/mysql-test</command></userinput></screen>
+
+<para>To test the results, issue: <command>make test</command>.</para>
 
 <para>Now, as the root user:</para>
 
