@@ -1,3 +1,6 @@
+2005-05-09 Igor Zivkovic <igor@linuxfromscratch.org>
+	* Added a killproc parameter to mysql (Nathan Coulson).
+
 2005-03-13 Bruce Dubbs <bdubbs@linuxfromscratch.org>
 	* Updated openldap1 and openldap2 to check for rrunning
       daemons before starting.
